# LinuxApplicationDevelopment2022

01_GitBuildReq/: main.c
02_TerminalProject/: Makefile  Show.c  test.txt
03_Multifile/: Makefile
04_Text/: randomize.sh
05_Debugging/: Makefile  out2.txt  range.c  script1.gdb  script2.gdb
06_Regexps/: Makefile  esub.c
07_TracingFencing/: Makefile  move.c  remove.c  true_error.txt_
08_Environmental/: Makefile.am  configure.ac  rhasher.c
09_I18n/: CMakeLists.txt  guess.c  run.sh
09_I18n/po/en_US.UTF-8/: guess.po
09_I18n/po/ru_RU.UTF-8/: guess.po
12_Documenting/: CMakeLists.txt  Doxyfile.in  Gettext_helpers.cmake  guess.c  guess.man
12_Documenting/po/en_US.UTF-8/: guess.po
12_Documenting/po/ru_RU.UTF-8/: guess.po
